# bpftime

./: CLAUDE_zh.md  CODE_OF_CONDUCT_zh.md  CONTRIBUTING_zh.md  README_zh.md  TRANSLATION_TERMS_zh.md  installation_zh.md  usage_zh.md
attach/: README_zh.md
attach/nv_attach_impl/: README-passes_zh.md  README_zh.md
attach/nv_attach_impl/trampoline/: README_zh.md
attach/syscall_trace_attach_impl/: README_zh.md
attach/text_segment_transformer/: README_zh.md
benchmark/: README_zh.md
benchmark/deepflow/: README_zh.md
benchmark/deepflow/benchmark/: README_zh.md
benchmark/fuse/: README_zh.md
benchmark/fuse/bpf/: README_zh.md
benchmark/gpu/: README_zh.md
benchmark/gpu/host/: README_zh.md  gpu_array_vs_per_thread_overhead_rtx5090_zh.md
benchmark/gpu/micro/: README_zh.md  examples_gemm_result_zh.md  examples_vec_add_result_p40_zh.md  examples_vec_add_result_zh.md  micro_gemm_result_zh.md  micro_vec_add_kernel_gpu_shared_result_p40_zh.md  micro_vec_add_result_p40_zh.md  micro_vec_add_result_zh.md
benchmark/gpu/nvbit/: README_zh.md  nvbit_vec_add_result_p40_zh.md  nvbit_vec_add_result_zh.md
benchmark/mpk/: README_zh.md  example_results_zh.md
benchmark/redis-durability-tuning/: README_zh.md
benchmark/ssl-nginx/: README_zh.md
benchmark/syscall/: README_zh.md  example_results_zh.md
benchmark/syscount-nginx/: README_zh.md
benchmark/uprobe/: README_zh.md  example_results_zh.md
bpftime-verifier/: README_zh.md
bpftime-verifier/ebpf-verifier/: CODE_OF_CONDUCT_zh.md  README_zh.md
bpftime-verifier/ebpf-verifier/ebpf-samples/: README_zh.md
bpftime-verifier/ebpf-verifier/ebpf-samples/src/: packet_start_ok.c
bpftime-verifier/ebpf-verifier/scripts/: README_zh.md
daemon/: README_zh.md
example/: README_zh.md
example/attach_implementation/: README_zh.md
example/attach_implementation/benchmark/: README_zh.md
example/attach_implementation/benchmark/erim_plugin/: README_zh.md
example/attach_implementation/benchmark/luajit_plugin/: README_zh.md
example/attach_implementation/benchmark/rlbox_plugin/: README_zh.md
example/attach_implementation/benchmark/wasm_plugin/: README_zh.md
example/bpf_features/bloom_filter_demo/: README_zh.md
example/bpf_features/get_stack_id_example/: README_zh.md
example/bpf_features/lpm_trie_demo/: README_zh.md
example/bpf_features/queue_demo/: QUEUE_TEST_README_zh.md  STACK_TEST_README_zh.md
example/bpf_features/tailcall_minimal/: README_zh.md
example/error-inject/: README_zh.md
example/gpu/: README_zh.md
example/gpu/atomizer/: README_zh.md
example/gpu/cuda-counter/: README_zh.md
example/gpu/cudagraph/: README_zh.md
example/gpu/cutlass/: README_zh.md
example/gpu/directly_run_on_gpu/: README_zh.md  results_direct_run_zh.md
example/gpu/faiss-test/: README_zh.md
example/gpu/gpu_shared_map/: README_zh.md
example/gpu/host_map_test/: README_zh.md
example/gpu/kernel_trace/: README_zh.md
example/gpu/kernelretsnoop/: README_zh.md
example/gpu/launchlate/: README_zh.md
example/gpu/launchlate-kernel-gpu-shared-map/: README_zh.md
example/gpu/llama-cpp-test/: README_zh.md
example/gpu/mem_trace/: README_zh.md
example/gpu/pytorch-test/: README_zh.md
example/gpu/rocm-counter/: README_zh.md
example/gpu/threadhist-gpu-kernel-shared-map/: README_zh.md
example/gpu/threadscheduling/: README_zh.md
example/hotpatch/redis/: README_zh.md
example/hotpatch/vim/: README_zh.md
example/libbpftime_example/: README_zh.md
example/malloc/: README_zh.md
example/minimal/: README_zh.md
example/minimal/usdt_minimal/: README_zh.md
example/tracing/bashreadline/: README_zh.md
example/tracing/bpftrace/: README_zh.md
example/tracing/goroutine/: README_zh.md
example/tracing/opensnoop/: README_zh.md
example/tracing/opensnoop_ring_buf/: README_zh.md
example/tracing/sslsniff/: README_zh.md
example/tracing/statsnoop/: README_zh.md
example/tracing/syscount/: README_zh.md
example/xdp-counter/: README_zh.md
runtime/: README_zh.md
runtime/src/bpf_map/: README_zh.md
runtime/syscall-server/: README_zh.md
runtime/test/: README_zh.md
scripts/: check_zh_docs.py
tools/: README_zh.md
tools/aot/: README_zh.md  optimize_zh.md
tools/bpftimetool/: README_zh.md
vm/: README_zh.md
vm/compat/ubpf-vm/: README_zh.md
vm/llvm-jit/: .clang-format  .clangd  .gitignore  CLAUDE.md  CLAUDE_zh.md  CMakeLists.txt  README.md  README_zh.md
vm/llvm-jit/.github/workflows/: bpf_conformance.yml  test-aot-cli.yml  test-spirv-opencl.yml  test-vm.yml
vm/llvm-jit/cli/: README_zh.md  main.cpp
vm/llvm-jit/example/ptx/: CMakeLists.txt  README.md  README_zh.md  ptx_test.cpp
vm/llvm-jit/example/ptx/example_trampoline/: README_zh.md  default_trampoline.cu
vm/llvm-jit/example/spirv/: CMakeLists.txt  README.md  README_zh.md  spirv_opencl_test.cpp
vm/llvm-jit/include/: llvmbpf.hpp
vm/llvm-jit/src/: compiler.cpp  compiler_utils.cpp  compiler_utils.hpp  ebpf_inst.h  llvm_jit_context.cpp  llvm_jit_context.hpp  vm.cpp
vm/llvm-jit/test/: README_zh.md
vm/llvm-jit/test/bpf_conformance_runner/: README_zh.md
vm/llvm-jit/test/src/: test.c  test_core_minimal_ffi.c  test_jit.c  test_vm.c
vm/llvm-jit/test/unit-test/: vm_test.cpp
